Tue Sep 15 18:22:11 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* local-file-output.rb, here.rb: [BUG#135]対応. 消えるはずのゴミ
	  が消えない問題に対応
	* bin/master, bin/inspector: [BUG#147] 実行権を設定

Fri Sep  4 18:59:36 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-mod-group-by.rb: basic_eachでhashがテストコードのままだった

Fri Sep  4 17:59:52 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* join.rb, b-join.rb, n-join.rb: [SR#102] join対応
	* equijoun.rb: [SR#102] equijoin対応
	* b-zipper.rb: importにno_importを設定するのを忘れていた
	* bjob.rb: 例外で間違ったローカル変数を参照していた

Fri Aug 28 14:20:58 2009  Hajime Masuda  <hajime.masuda@mail.rakuten.co.jp>

	* roma-put.rb: smap -> smap2 修正漏れ

Thu Aug 27 19:37:34 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-cat.rb: [SR#102] cat対応

Thu Aug 20 14:44:20 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bhere.rb: [BUG#135]対応. 巨大ファイルをfairy cat出来ない
	* roma-put.rb: includeファイル間違い

Tue Aug 18 16:05:13 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* each-substream-mapper.rb: RomaPutを分離
	* roma-put.rb: RomaPut新設, 仮対応

Sat Aug  8 01:15:12 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-find.rb, controller.rb, n-find.rb: [SR#102] find対応

Fri Aug  7 23:58:52 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-group-by.rb: [SR#102] mgroup_by対応

Fri Aug  7 22:50:09 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* each-substream-mapper.rb: [SR#126] mapfで配列に展開しない.

Fri Aug  7 21:37:27 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-inject.rb, n-inject.rb, controller.rb: [SR#102] inject対応
	* bjob.rb: Bjob#create_nodes: ブロックがnjobを返すようにした

Wed Aug  5 22:38:14 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* varray.rb: [BUG#131] VArray#index_on_arrayを直した.

Wed Aug  5 22:17:57 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-there.rb, controller.rb, n-there.rb, file-place.rb: [SR#102]
	  there対応

Wed Aug  5 20:32:03 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-input-iota.rb, controller.rb, n-input-iota.rb, file-place.rb: