@@ -1,5 +1,7 @@
 # encoding: UTF-8
 
+require "fairy/node/n-single-exportable"
+
 module Fairy
   class NInputVArray<NSingleExportInput
     Processor.def_export self
